fix: (hopefully) fix search bar misalignment

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
   z-index: 1;
   form {
     display: grid;
-    grid-template-columns: 1.5em 10px 1fr;
+    grid-template-columns: 1.5em 10px auto;
     grid-template-rows: 1.2em;
     svg {
       fill: var(--dark-color);
@@ -43,8 +43,6 @@ body {
       width: 1.2em;
     }
     input {
-      padding: 2px;
-      width: 100%;
       border-radius: 20px;
       border-width: 0;
       background-color: var(--medium-color);
